# zyn-backend

./: .env  README.md  app.json  ecommerce.db  env.example  migrate_guest_orders.py  postgresql_migration.sql  pyproject.toml  recreate_tables.py  requirements.txt  setup.py  setup_project.py  test_database.py  test_models.py
app/: __init__.py  auth.py  cloudinary_utils.py  config.py  crud.py  crud_new.py  database.py  main.py  models.py  models_new.py  schemas.py  utils.py  utils_cloudinary.py
app/routers/: auth.py  designs.py  loyalty.py  orders.py  products.py  reviews.py  users.py
